org.eclipse.jdt.compiler.apt.tests/processors/org/eclipse/jdt/compiler/apt/tests/processors/negative/NegativeModelProc#checkNegative8().mjava
	/**
	 * Check the model of resources/targets.negative.pa.Negative8
	 * @return true if all tests passed
	 */
	public boolean checkNegative8() throws Exception {
		// check that all expected elements are here
		List<TypeElement> rootElements = new ArrayList<TypeElement>();
		String[] suffixes = new String[] {"a", "b", "c", "d", "e", "f"};
		for (int i = 0, l = suffixes.length; i < l; i++) {
			TypeElement element = _elementUtils.getTypeElement("targets.negative.pa.Negative8" + suffixes[i]);
			if (null == element) {
				reportError("Element Negative8" + suffixes[i] + " was not found");
				return false;
			}
			rootElements.add(element);
		}
		if (this.processingEnv.getSourceVersion() == SourceVersion.RELEASE_6) {
			if (!checkModel(rootElements, NEGATIVE_8_MODEL_VERSION6, "Negative8")) {
				return false;
			}
		} else if (!checkModel(rootElements, NEGATIVE_8_MODEL, "Negative8")) {
			return false;
		}
		return true;
	}

